[gd_scene load_steps=2 format=3 uid="uid://qdcsaauv2sdp"]

[ext_resource type="Script" uid="uid://bgrxc33my654b" path="res://scripts/message_window.gd" id="1_nbplp"]

[node name="MessageWindow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_nbplp")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(3840, 600)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1520.0
offset_right = 3800.0
offset_bottom = 2120.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_left = 96.0
offset_top = 94.0
offset_right = 3096.0
offset_bottom = 598.0
pivot_offset = Vector2(50, 50)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 48

[node name="TextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 400)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 48
theme_override_font_sizes/bold_italics_font_size = 48
theme_override_font_sizes/italics_font_size = 48
theme_override_font_sizes/mono_font_size = 48
bbcode_enabled = true
tab_size = 5
